new - bunch of examples and experiments

--- a/09_starchaser/docker-compose.yml
+++ b/09_starchaser/docker-compose.yml
@@ -8,6 +8,8 @@ services:
       - ./app/:/home/app/
     depends_on:
       - db
+    restart: "no"
+    # restart: "unless-stopped"
   db:
     container_name: pg_container_08
     image: postgres:10
@@ -16,15 +18,18 @@ services:
       - "5432:5432"
     volumes:
       - pgdata:/var/lib/postgresql/data
+    restart: "no"
+    # restart: "unless-stopped"
 
   pgadmin:
     container_name: pgadmin4_container_08
     image: dpage/pgadmin4
-    restart: always
     environment:
       PGADMIN_DEFAULT_EMAIL: admin@admin.com
       PGADMIN_DEFAULT_PASSWORD: root
     ports:
       - "5050:80"
+    restart: "no"
+    # restart: "unless-stopped"
 volumes:
   pgdata:
